Fix underline for nested tabs, so it doesn't have a break in it on IE6 (caused by img.dijitTabButtonSpacer) and so it doesn't extend past the edge of the text.  Refs #7628.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@16042 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/nihilo/layout/TabContainer.css
+++ b/themes/nihilo/layout/TabContainer.css
@@ -89,10 +89,10 @@
 .nihilo .dijitTabContainer .dijitTabContainer .dijitTab .dijitTabContent {
 	background: none;
 }
-.nihilo .dijitTabContainer .dijitTabContainer .dijitTabHover .dijitTabContent {
+.nihilo .dijitTabContainer .dijitTabContainer .dijitTabHover .dijitTabContent .tabLabel {
 	text-decoration: underline;
 }
-.nihilo .dijitTabContainer .dijitTabContainer .dijitTabChecked {
+.nihilo .dijitTabContainer .dijitTabContainer .dijitTabChecked .tabLabel {
 	text-decoration: underline;
 	font-weight: bold;
 }
